SQLiteBase主要为程序保证数据库存在并且表结构符合要求

--- a/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/Project-001-UpdateMoney.csproj
+++ b/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/Project-001-UpdateMoney.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.SQLite, Version=1.0.109.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -63,6 +64,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ChangeRecord.cs" />
+    <Compile Include="Data\Base\SQLiteBase.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -93,6 +95,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\Chy.SQLite\Chy.SQLite\Chy.SQLite.csproj">
+      <Project>{351A8BA0-AB48-4BD6-B037-CA8A70FDEEB8}</Project>
+      <Name>Chy.SQLite</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
