通过BankContext2可以实现通过配置的SQLite连接，同时可以自动建库，但是建表还是需要执行SQL

--- a/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/App.config
+++ b/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/App.config
@@ -16,13 +16,13 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
       <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
-      <!--SQLite--><!--
-      <provider invariantName="System.Data.SQLite" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />-->
+      <!--SQLite-->
+      <provider invariantName="System.Data.SQLite" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
     </providers>
   </entityFramework>
-  <!--<connectionStrings>
-    <add name="SqliteBank" connectionString="Data Source=Data//Bank.db" providerName="System.Data.SQLite" />
-  </connectionStrings>-->
+  <connectionStrings>
+    <add name="SqliteBank" connectionString="Data Source=E:\Bank.s3db" providerName="System.Data.SQLite" />
+  </connectionStrings>
   <system.data>
     <DbProviderFactories>
       <remove invariant="System.Data.SQLite.EF6" />
