完全可以依赖EF对SQLite数据库的建库建表以及数据读写等操作

--- a/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/Project-001-UpdateMoney.csproj
+++ b/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/Project-001-UpdateMoney.csproj
@@ -83,7 +83,8 @@
     <Compile Include="ChangeRecord.cs" />
     <Compile Include="Data\BankContext2.cs" />
     <Compile Include="Data\BankContext.cs" />
-    <Compile Include="Data\Base\SQLiteBase.cs" />
+    <Compile Include="Data\Base\SQLiteBaseForEF.cs" />
+    <Compile Include="Data\Base\SQLiteBaseForHelper.cs" />
     <Compile Include="Data\Entity\RecordInfo.cs" />
     <Compile Include="Data\Entity\VaultInfo.cs" />
     <Compile Include="MainWindow.xaml.cs">
