--- a/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/App.config
+++ b/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/App.config
@@ -22,6 +22,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="SqliteBank" connectionString="Data Source=E:\Bank.s3db" providerName="System.Data.SQLite" />
+    <add name="SqliteBank2" connectionString="Data Source=|ConnectionDirectory|" providerName="System.Data.SQLite" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
