解决不能通过guid作为查询条件进行查询的问题，修改连接字符串后即可

--- a/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/App.config
+++ b/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/App.config
@@ -22,7 +22,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="SqliteBank" connectionString="Data Source=E:\Bank.s3db" providerName="System.Data.SQLite" />
-    <add name="SqliteBank2" connectionString="Data Source=|DataDirectory|\Bank.s3db" providerName="System.Data.SQLite" />
+    <add name="SqliteBank2" connectionString="Data Source=|DataDirectory|\Bank.s3db;binaryguid=False" providerName="System.Data.SQLite" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
