--- a/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/Project-001-UpdateMoney.csproj
+++ b/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/Project-001-UpdateMoney.csproj
@@ -44,6 +44,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.SQLite, Version=1.0.109.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Data.SQLite.Core.1.0.109.1\lib\net46\System.Data.SQLite.dll</HintPath>
@@ -72,6 +73,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Data\BankContext3.cs" />
     <Compile Include="SaveMoney.xaml.cs">
       <DependentUpon>SaveMoney.xaml</DependentUpon>
     </Compile>
