--- a/Examples/Project-002-Notepad/Project-002-Notepad/Project-002-Notepad.csproj
+++ b/Examples/Project-002-Notepad/Project-002-Notepad/Project-002-Notepad.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Data\NotepadContext.cs" />
     <Compile Include="Data\Entity\NotepadInfo.cs" />
     <Compile Include="Data\Entity\VersionInfo.cs" />
+    <Compile Include="Data\Repository\NotepadInfoRepository.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
